--- a/index.css
+++ b/index.css
@@ -1,27 +1,4 @@
-/* 안성탕면체 Bold */
-@font-face {
-	font-family: "Ansungtangmyun-Bold";
-	src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/Ansungtangmyun-Bold.woff2")
-		format("woff2");
-	font-weight: normal;
-	font-style: normal;
-}
-/* 배민 도현체 */
-@font-face {
-	font-family: "BMDOHYEON";
-	src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMDOHYEON.woff")
-		format("woff");
-	font-weight: normal;
-	font-style: normal;
-}
-/* 배민 주아체 */
-@font-face {
-	font-family: "BMJUA";
-	src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/BMJUA.woff")
-		format("woff");
-	font-weight: normal;
-	font-style: normal;
-}
+/* 나눔스퀘어네오체 */
 @font-face {
    font-family: 'NanumSquareNeo-Variable';
    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
@@ -29,14 +6,16 @@
    font-style: normal;
 }
 
+body {
+   display: flex;
+   justify-content: center;
+   background-color: #f6f9fc;
+}
+
 .all_area {
    display: flex;
    flex-direction: column;
-   margin: 0 30px;
-}
-
-body {
-   background-color: #f6f9fc;
+   width: 80vw
 }
 
 /* 헤더 영역 */
@@ -44,8 +23,8 @@ body {
    display: flex;
    justify-content: center;
    align-items: center;
-   margin: 30px 0;
-   font-family: "NanumSquareNeo-Variable";
+   margin: 50px 0;
+   font-family: "NanumSquareNeo-Variable", serif;
    font-size: 50px;
    cursor: default;
    -webkit-user-select:none;
@@ -56,34 +35,66 @@ body {
 
 .headline {
    /* margin: 0 10% 0 10%; */
-   height: 2px;
-   background-color: rgb(189, 189, 189);
+   height:           2px;
+   background-color: #bdbdbd;
 }
 
 .tab_bar_area{
-   display: flex;
-   flex-direction: row;
-   justify-content: center;
-   align-items: center;
-   font-family: "NanumSquareNeo-Variable";
-   font-size: 30px;
-   -webkit-user-select:none;
-   -moz-user-select:none;
-   -ms-user-select:none;
-   user-select: none;
+   display:             flex;
+   flex-direction:      row;
+   justify-content:     center;
+   align-items:         center;
+   font-family:         "NanumSquareNeo-Variable", serif;
+   font-size:           30px;
+   -webkit-user-select: none;
+   -moz-user-select:    none;
+   -ms-user-select:     none;
+   user-select:         none;
 }
 
-.tab_ecoFriendlyCar, 
+.tab_ecoFriendlyCar,
 .tab_env {
-   padding: 30px 17%;
-   cursor: pointer;
+   width: 10vw;
+   padding:          30px 15vw;
+   cursor:           pointer;
+   background-color: #efefef;
 }
 
 .tab_ecoFriendlyCar {
-   background-color: rgb(193, 221, 231);
+   /*background-color: #e1e1e1;*/
 }
 
 .tab_ecoFriendlyCar:hover,
 .tab_env:hover {
-   background-color: lightblue;
+   background-color: #c1dde7;
+}
+
+#tab_selected {
+   background-color: #c1dde7;
+}
+
+.main_area {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+
+.img_car {
+   height: 28vw;
+   width: 37vw;
+}
+.graph_area {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-around;
+   margin-top: 20px;
+}
+
+graph {
+   padding: 0 15px;
+}
+
+.comment_area {
+   margin-top: 25px;
+   height: 30vw;
 }
