--- a/css/graph.css
+++ b/css/graph.css
@@ -55,15 +55,6 @@
    width: 100%;
    opacity: 0;
 }
-/* .fade_in { */
-/*    display: flex; */
-/*    flex-direction: column; */
-/*    justify-content: space-around; */
-/*    align-items: center; */
-/*    margin-top: 10px; */
-/*    width: 100%; */
-/*    opacity: 1; */
-/* } */
 .fade_out {
    display: flex;
    flex-direction: column;
@@ -88,7 +79,7 @@
    display:          flex;
    flex-direction:   column;
    align-items:      center;
-   background-color: white;
+   background-color: rgba(255, 255, 255, 0.54);
 }
 
 graph, dataframe {
